--- a/index.html
+++ b/index.html
@@ -59,15 +59,30 @@
         <section class="container my-5">
             <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner">
-                    <div class="carousel-item active">
+                    <div class="carousel-item active opacity-75 position-relative">
                         <img src="images/cover/cover-1.png" class="d-block w-100" alt="...">
 
+
                     </div>
-                    <div class="carousel-item">
-                        <img src="images/cover/cover-2.jpg" class="d-block w-100" alt="...">
+                    <div class="text-white fw-bold position-absolute top-50 start-50 translate-middle">
+                        <h2>Get Started Digital Learning</h2>
+                        <p>It is a long established fact that a reader will be distracted by the readable content of
+                            a page when looking at its layout.</p>
+                        <button type="button" class="btn btn-primary">Get Started</button>
+
                     </div>
-                    <div class="carousel-item">
+                    <div class="carousel-item opacity-75 position-relative">
+                        <img src="images/cover/cover-2.jpg" class=" img-fluid d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item bg-success p-2 text-dark bg-opacity-10">
                         <img src="images/cover/cover-3.jpg" class="d-block w-100" alt="...">
+                    </div>
+                    <div class="text-white fw-bold position-absolute top-50 start-50 translate-middle">
+                        <h2>Get Started Digital Learning</h2>
+                        <p>It is a long established fact that a reader will be distracted by the readable content of
+                            a page when looking at its layout.</p>
+                        <button type="button" class="btn btn-primary">Get Started</button>
+
                     </div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
@@ -88,6 +103,7 @@
     <!-- header section end  -->
 
     <!-- main section start -->
+
     <main class="container">
 
         <!-- our popular courses section start  -->
@@ -108,16 +124,89 @@
                 </div>
                 <div class="col-md-8">
                     <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
-                            additional content. This content is a little bit longer.</p>
-                        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                        <h5 class="card-title">Fundamental Of UI/UX Design</h5>
+                        <p class="card-text">TSome quick example text to build on the card title and make up the bulk of
+                            the card.</p>
+                        <button type="button" class="btn btn-outline-primary">Price : 20$</button>
                     </div>
                 </div>
             </div>
         </div>
 
-        <!-- courses card section start  -->
+        <!-- courses card section end  -->
+
+        <!-- acordian friquenty ask questioin start  -->
+
+        <section>
+            <div class="my-5">
+                <h1 class="mx-auto text-center">Frequently Asked Questions</h1>
+                <p class="mx-auto text-center">It is a long established fact that a reader will be distracted by the
+                    readable content of a page whenlooking at its layout.
+                </p>
+            </div>
+            <div>
+                <div class="accordion accordion-flush" id="accordionFlushExample">
+                    <div class="accordion-item">
+                        <h2 class="accordion-header" id="flush-headingOne">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                data-bs-target="#flush-collapseOne" aria-expanded="false"
+                                aria-controls="flush-collapseOne">What is the different's between Flex and Grid ?
+                            </button>
+                        </h2>
+                        <div id="flush-collapseOne" class="accordion-collapse collapse"
+                            aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
+                            <div class="accordion-body">– The very first and the most important difference between the
+                                two layout modules is that CSS Flexbox is a one-dimensional layout model whereas CSS
+                                Grid is a two-dimensional model. By one-dimensional it means a Flexbox container can
+                                either facilitate laying out things in a row, or lay them out in a column.
+
+                                The CSS Grid, on the other hand, can facilitate laying out items across and down at
+                                once, meaning you can work along two axes, vertically and horizontally, which the CSS
+                                Flexbox cannot do. Grid thinks about rows and columns at the same time.
+
+
+
+                                Read more: Difference Between CSS Flexbox and Grid | Difference Between
+                                http://www.differencebetween.net/technology/difference-between-css-flexbox-and-grid/#ixzz7aM5jPwBb
+                            </div>
+                        </div>
+                    </div>
+                    <div class="accordion-item">
+                        <h2 class="accordion-header" id="flush-headingTwo">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                data-bs-target="#flush-collapseTwo" aria-expanded="false"
+                                aria-controls="flush-collapseTwo">
+                                Accordion Item #2
+                            </button>
+                        </h2>
+                        <div id="flush-collapseTwo" class="accordion-collapse collapse"
+                            aria-labelledby="flush-headingTwo" data-bs-parent="#accordionFlushExample">
+                            <div class="accordion-body">Placeholder content for this accordion, which is intended to
+                                demonstrate the <code>.accordion-flush</code> class. This is the second item's accordion
+                                body. Let's imagine this being filled with some actual content.</div>
+                        </div>
+                    </div>
+                    <div class="accordion-item">
+                        <h2 class="accordion-header" id="flush-headingThree">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                data-bs-target="#flush-collapseThree" aria-expanded="false"
+                                aria-controls="flush-collapseThree">
+                                Accordion Item #3
+                            </button>
+                        </h2>
+                        <div id="flush-collapseThree" class="accordion-collapse collapse"
+                            aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlushExample">
+                            <div class="accordion-body">Placeholder content for this accordion, which is intended to
+                                demonstrate the <code>.accordion-flush</code> class. This is the third item's accordion
+                                body. Nothing more exciting happening here in terms of content, but just filling up the
+                                space to make it look, at least at first glance, a bit more representative of how this
+                                would look in a real-world application.</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- acordian friquenty ask questioin end -->
 
     </main>
 
@@ -126,8 +215,13 @@
 
 
     <!-- footer section  -->
-    <footer>
-
+    <footer class="bg-blak">
+        <div>
+            <h1>Pro Edu</h1>
+            <p>Office 41, Zawaya Buildin, Ghala Muscat,
+                Sultanate of Oman</p>
+            <p>Privacy Ploicy | Terms of use</p>
+        </div>
     </footer>
     <!-- footer section end  -->
 
