--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
         <!-- acordian friquenty ask questioin start  -->
 
         <section>
-            <div class="my-5">
+            <div class="my-5 w-75 mx-auto">
                 <h1 class="mx-auto text-center">Frequently Asked Questions</h1>
                 <p class="mx-auto text-center">It is a long established fact that a reader will be distracted by the
                     readable content of a page whenlooking at its layout.
@@ -155,19 +155,13 @@
                         </h2>
                         <div id="flush-collapseOne" class="accordion-collapse collapse"
                             aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
-                            <div class="accordion-body">– The very first and the most important difference between the
+                            <div class="accordion-body"> The very first and the most important difference between the
                                 two layout modules is that CSS Flexbox is a one-dimensional layout model whereas CSS
                                 Grid is a two-dimensional model. By one-dimensional it means a Flexbox container can
-                                either facilitate laying out things in a row, or lay them out in a column.
-
-                                The CSS Grid, on the other hand, can facilitate laying out items across and down at
+                                either facilitate laying out things in a row, or lay them out in a column.The CSS Grid,
+                                on the other hand, can facilitate laying out items across and down at
                                 once, meaning you can work along two axes, vertically and horizontally, which the CSS
                                 Flexbox cannot do. Grid thinks about rows and columns at the same time.
-
-
-
-                                Read more: Difference Between CSS Flexbox and Grid | Difference Between
-                                http://www.differencebetween.net/technology/difference-between-css-flexbox-and-grid/#ixzz7aM5jPwBb
                             </div>
                         </div>
                     </div>
@@ -175,15 +169,15 @@
                         <h2 class="accordion-header" id="flush-headingTwo">
                             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                                 data-bs-target="#flush-collapseTwo" aria-expanded="false"
-                                aria-controls="flush-collapseTwo">
-                                Accordion Item #2
-                            </button>
+                                aria-controls="flush-collapseTwo"> What is the different's between bootstrap and
+                                tailwind ? </button>
                         </h2>
                         <div id="flush-collapseTwo" class="accordion-collapse collapse"
                             aria-labelledby="flush-headingTwo" data-bs-parent="#accordionFlushExample">
-                            <div class="accordion-body">Placeholder content for this accordion, which is intended to
-                                demonstrate the <code>.accordion-flush</code> class. This is the second item's accordion
-                                body. Let's imagine this being filled with some actual content.</div>
+                            <div class="accordion-body">Bootstrap comes with a set of pre-styled responsive,
+                                mobile-first components that possess a definite UI kit. Tailwind CSS uses a set of
+                                utility classes to create a neat UI with more flexibility and uniqueness. Sites created
+                                using Bootstrap follow the generic pattern that makes them look identical.</div>
                         </div>
                     </div>
                     <div class="accordion-item">
@@ -191,16 +185,31 @@
                             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                                 data-bs-target="#flush-collapseThree" aria-expanded="false"
                                 aria-controls="flush-collapseThree">
-                                Accordion Item #3
+                                What is the CSS box model ?
                             </button>
                         </h2>
                         <div id="flush-collapseThree" class="accordion-collapse collapse"
                             aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlushExample">
-                            <div class="accordion-body">Placeholder content for this accordion, which is intended to
-                                demonstrate the <code>.accordion-flush</code> class. This is the third item's accordion
-                                body. Nothing more exciting happening here in terms of content, but just filling up the
-                                space to make it look, at least at first glance, a bit more representative of how this
-                                would look in a real-world application.</div>
+                            <div class="accordion-body">A CSS box model is a compartment that includes numerous assets,
+                                such as edge, border, padding and material. It is used to develop the design and
+                                structure of a web page. It can be used as a set of tools to personalize the layout of
+                                different components. According to the CSS box model, the web browser supplies each
+                                element as a square prism.</div>
+                        </div>
+                    </div>
+                    <div class="accordion-item">
+                        <h2 class="accordion-header" id="flush-headingFour">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                data-bs-target="#flush-collapseFour" aria-expanded="false"
+                                aria-controls="flush-collapseFour">
+                                What is a semantic tag ?
+                            </button>
+                        </h2>
+                        <div id="flush-collapseFour" class="accordion-collapse collapse"
+                            aria-labelledby="flush-headingFour" data-bs-parent="#accordionFlushExample">
+                            <div class="accordion-body">The HTML semantics refers to the tags that provide meaning to an
+                                HTML page rather than just presentation. It makes HTML more comprehensible by better
+                                defining the different sections and layout of web pages.</div>
                         </div>
                     </div>
                 </div>
@@ -215,12 +224,12 @@
 
 
     <!-- footer section  -->
-    <footer class="bg-blak">
+    <footer class="bg-black my-5" style="height: 300px;">
         <div>
-            <h1>Pro Edu</h1>
-            <p>Office 41, Zawaya Buildin, Ghala Muscat,
+            <h1 class="text-white text-center fw-semibold pt-5 ">Pro Edu</h1>
+            <p class="text-center ">Office 41, Zawaya Buildin, Ghala Muscat,
                 Sultanate of Oman</p>
-            <p>Privacy Ploicy | Terms of use</p>
+            <p class="text-center ">Privacy Ploicy | Terms of use</p>
         </div>
     </footer>
     <!-- footer section end  -->
