--- a/index.html
+++ b/index.html
@@ -6,12 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Develop your Education </title>
 
+    <!-- font awesome icons  -->
+    <script src="https://kit.fontawesome.com/3da87c0be5.js" crossorigin="anonymous"></script>
+
     <!-- bootstrap link  -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
 
     <!-- custom css link  -->
-
+    <link rel="stylesheet" href="styles/style.css">
 </head>
 
 <body>
@@ -217,6 +220,12 @@
         </section>
         <!-- acordian friquenty ask questioin end -->
 
+        <!-- company logo section srart  -->
+        <section class="my-5">
+            <h1 class="mx-auto text-center">Trusted by over 800+ companies</h1>
+        </section>
+        <!-- company logo section end -->
+
     </main>
 
     <!-- main section end -->
@@ -231,6 +240,12 @@
                 Sultanate of Oman</p>
             <p class="text-center ">Privacy Ploicy | Terms of use</p>
         </div>
+        <ul class="text-center">
+            <a class="ps-3 text-white" href="#"><i class="fa-brands fa-square-facebook"></i></a>
+            <a class="ps-3 text-white" href="#"><i class="fa-brands fa-square-instagram"></i></a>
+            <a class="ps-3 text-white" href="#"><i class="fa-brands fa-youtube"></i></a>
+            <a class="ps-3 text-white" href="#"><i class="fa-brands fa-linkedin-in"></i></a>
+        </ul>
     </footer>
     <!-- footer section end  -->
 
@@ -240,26 +255,3 @@
 </body>
 
 </html>
-
-<!-- <li class="nav-item">
-    <a class="nav-link active" aria-current="page" href="#">Home</a>
-</li>
-<li class="nav-item">
-    <a class="nav-link" href="#">Courses</a>
-</li>
-</li>
-<li class="nav-item">
-    <a class="nav-link" href="#">Deals</a>
-</li>
-</li>
-<li class="nav-item">
-    <a class="nav-link" href="#">Success</a>
-</li>
-</li>
-<li class="nav-item">
-    <a class="nav-link" href="#">About</a>
-</li>
-</li>
-<li class="nav-item">
-    <a class="nav-link" href="#">Register</a>
-</li> -->
