--- a/index.html
+++ b/index.html
@@ -221,8 +221,15 @@
         <!-- acordian friquenty ask questioin end -->
 
         <!-- company logo section srart  -->
-        <section class="my-5">
+        <section class="my-5 d-none d-sm-block d-sm-none d-md-block d-md-none d-lg-block">
             <h1 class="mx-auto text-center">Trusted by over 800+ companies</h1>
+            <div class="mx-auto text-center">
+                <a class="ms-5" href="#"><img src="images/company/company-1.png" alt=""></a>
+                <a class="ms-5" href="#"><img src="images/company/company-2.png" alt=""></a>
+                <a class="ms-5" href="#"><img src="images/company/company-3.png" alt=""></a>
+                <a class="ms-5" href="#"><img src="images/company/company-4.png" alt=""></a>
+                <a class="ms-5" href="#"><img src="images/company/company-6.png" alt=""></a>
+            </div>
         </section>
         <!-- company logo section end -->
 
