added a student section

--- a/index.html
+++ b/index.html
@@ -137,6 +137,139 @@
         </div>
 
         <!-- courses card section end  -->
+        <br>
+        <!-- work section start  -->
+        <section>
+            <div class="card mb-3" style="max-width: 1150px;">
+                <div class="row g-0">
+                    <div class="col-md-6">
+                        <img src="./images/working.png" class="img-fluid rounded-start" alt="...">
+                    </div>
+                    <div class="col-md-6">
+                        <div class="card-body ms-4 my-5 text-fluid">
+                            <h2 class="card-title">Explore The elearning Institute</h2>
+                            <p class="card-text">However, with the rapid progress in technology and the advancement in
+                                learning systems, it is now embraced by the masses. The introduction of computers was
+                                the basis of this revolution and with the passage of time, as we get hooked to
+                                smartphones, tablets, etc, these devices now have an importance place in the classrooms
+                                for learning.</p> <br>
+                            <p class="card-text"><small class="text-muted">A learning system based on formalised
+                                    teaching but with the help of electronic resources is known as E-learning. While
+                                    teaching can be based in or out of the classrooms, the use of computers and the
+                                    Internet forms the major component of E-learning. </small></p>
+                        </div>
+                        <div class="ms-3 d-flex justify-content-around ">
+                            <div>
+                                <h1>3.2K+</h1>
+                                <p>Online Course</p>
+                            </div>
+                            <div>
+                                <h1>600+</h1>
+                                <p>Expert member</p>
+                            </div>
+                            <div>
+                                <h1>1k+</h1>
+                                <p>Rating & Review</p>
+                            </div>
+                        </div>
+                        <br>
+                        <button type="button" class="btn btn-primary mx-5" disabled>Read more </button>
+
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- work section end  -->
+
+        <!-- ready to join section start  -->
+
+        <section class="bg-info p-5 rounded d-flex justify-content-between my-5">
+            <div>
+                <h1>Ready to join?</h1>
+                <p>It is a long established fact that a reader will be distracted by the readable content of a page when
+                    looking at its layout.</p>
+            </div>
+            <div>
+                <!-- Button trigger modal -->
+                <button type="button" class="btn btn-light text-info mt-4" data-bs-toggle="modal"
+                    data-bs-target="#exampleModal">
+                    Register Now
+                </button>
+
+                <!-- Modal -->
+                <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
+                    aria-hidden="true">
+                    <div class="modal-dialog">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h5 class="modal-title" id="exampleModalLabel">see more updates</h5>
+                                <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                    aria-label="Close"></button>
+                            </div>
+                            <div class="modal-body">
+                                This means that even if you have studied at degree level before, studying in a second or
+                                additional language may present extra challenges for you and you may find that studying
+                                takes longer than expected.
+                            </div>
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                                <button type="button" class="btn btn-primary">Save changes</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- ready to join section start  -->
+
+        <!-- student section start  -->
+        <section>
+            <div>
+                <h1>Meet Our Successfull Students</h1>
+                <p>It is a long established fact that a reader will be distracted by the readable content of a page when
+                    looking at its layout.</p>
+            </div>
+            <div class="row row-cols-1 row-cols-md-2 row-cols-lg-4 g-4">
+                <div class="col">
+                    <div class="card border border-0 shadow-lg h-100">
+                        <img src="images/student/student-1.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Awlad Hossain</h5>
+                            <p>UIUX Designer</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card border border-0 shadow-lg h-100">
+                        <img src="images/student/student-2.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title"> Jannatul Islam</h5>
+                            <p>Motion Design</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card border border-0 shadow-lg h-100">
+                        <img src="images/student/student-4.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Nishi Akter</h5>
+                            <p>Web Developer</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card border border-0 shadow-lg h-100">
+                        <img src="images/student/student-3.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Imran Hossain </h5>
+                            <p>Graphic Designer</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- student section end -->
+
 
         <!-- acordian friquenty ask questioin start  -->
 
