--- a/index.html
+++ b/index.html
@@ -111,31 +111,145 @@
 
         <!-- our popular courses section start  -->
 
-        <div class="my-5 text-center">
-            <h1>Discover Our Popular Courses</h1>
-            <p>It is a long established fact that a reader will be distracted by the readable content of a page when
-                looking at its layout.</p>
-        </div>
-
-        <!-- our popular courses section start  -->
-
         <!-- courses card section start  -->
-        <div class="card mb-3" style="max-width: 540px;">
-            <div class="row g-0">
-                <div class="col-md-4">
-                    <img src="./images/course/course-1.png" class="img-fluid rounded-start" alt="...">
-                </div>
-                <div class="col-md-8">
-                    <div class="card-body">
-                        <h5 class="card-title">Fundamental Of UI/UX Design</h5>
-                        <p class="card-text">TSome quick example text to build on the card title and make up the bulk of
-                            the card.</p>
-                        <button type="button" class="btn btn-outline-primary">Price : 20$</button>
+        <section>
+            <div>
+                <h2 class="container text-center mt-5 w-50">
+                    Discover Our Popular Courses
+                </h2>
+                <p class="container text-center w-75">
+                    It is a long established fact that a reader will be distracted by the readable content of a page
+                    when looking at its layout.
+                </p>
+            </div>
+            <div class="container my-5">
+                <!-- 1st raw  -->
+                <div class="row row-cols-1 row-cols-md-1 row-cols-lg-2">
+                    <div class="col">
+                        <div class="card mb-3 w-100">
+                            <div class="row g-0">
+                                <div class="col-md-4">
+                                    <img src="images/course/course-1.png" class="img-fluid rounded-start w-100"
+                                        alt="...">
+                                </div>
+                                <div class="col-md-8">
+                                    <div class="card-body">
+                                        <h3 class="card-title">Fundamental Of UI/UX Design</h3>
+                                        <p class="card-text">Some quick example text to build on the card title and make
+                                            up the bulk of the card.</p>
+                                        <p class="text-primary fw-bold">Price: 20$</p>
+                                    </div>
+
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="card mb-3 w-100">
+                            <div class="row g-0">
+                                <div class="col-md-4">
+                                    <img src="images/course/course-2.png" class="img-fluid rounded-start w-100"
+                                        alt="...">
+                                </div>
+                                <div class="col-md-8">
+                                    <div class="card-body">
+                                        <h3 class="card-title">Javascript Basic to advanced</h3>
+                                        <p class="card-text">Some quick example text to build on the card title and make
+                                            up the bulk of the card</p>
+                                        <p class="text-primary fw-bold">Price: 20$</p>
+                                    </div>
+
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
-            </div>
-        </div>
+                <!-- 2nd raw  -->
+                <div class="row row-cols-1 row-cols-md-1 row-cols-lg-2">
+                    <div class="col">
+                        <div class="card mb-3 w-100">
+                            <div class="row g-0">
+                                <div class="col-md-4">
+                                    <img src="images/course/course-3.png" class="img-fluid rounded-start w-100"
+                                        alt="...">
+                                </div>
+                                <div class="col-md-8">
+                                    <div class="card-body">
+                                        <h3 class="card-title">Fullstack Web Development</h3>
+                                        <p class="card-text">Some quick example text to build on the card title and make
+                                            up the bulk of the card.</p>
+                                        <p class="text-primary fw-bold">Price: 20$</p>
+                                    </div>
 
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="card mb-3 w-100">
+                            <div class="row g-0">
+                                <div class="col-md-4">
+                                    <img src="images/course/course-4.png" class="img-fluid rounded-start w-100"
+                                        alt="...">
+                                </div>
+                                <div class="col-md-8">
+                                    <div class="card-body">
+                                        <h3 class="card-title">Digital Marketing</h3>
+                                        <p class="card-text">Some quick example text to build on the card title
+                                            and make up the bulk of the card.</p>
+                                        <p class="text-primary fw-bold">Price: 20$</p>
+                                    </div>
+
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- 3rd raw  -->
+                <div class="row row-cols-1 row-cols-md-1 row-cols-lg-2">
+                    <div class="col">
+                        <div class="card mb-3 w-100">
+                            <div class="row g-0">
+                                <div class="col-md-4">
+                                    <img src="images/course/course-5.png" class="rounded-start w-100" alt="...">
+                                </div>
+                                <div class="col-md-8">
+                                    <div class="card-body">
+                                        <h3 class="card-title">Photography Basic Rules</h3>
+                                        <p class="card-text">Some quick example text to build on the card title and make
+                                            up the bulk of the card.</p>
+                                        <p class="text-primary fw-bold">Price: 20$</p>
+                                    </div>
+
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="card mb-3 w-100">
+                            <div class="row g-0">
+                                <div class="col-md-4">
+                                    <img src="images/course/course-6.png" class="rounded-start w-100" alt="...">
+                                </div>
+                                <div class="col-md-8">
+                                    <div class="card-body">
+                                        <h3 class="card-title">Motion Graphics</h3>
+                                        <p class="card-text">Some quick example text to build on the card title and make
+                                            up the bulk of the card.</p>
+                                        <p class="text-primary fw-bold">Price: 20$</p>
+                                    </div>
+
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+            <div class="text-center mt-2">
+                <button class="btn btn-primary">See More Course</button>
+            </div>
+        </section>
         <!-- courses card section end  -->
         <br>
         <!-- work section start  -->
