added a student feedback section

--- a/index.html
+++ b/index.html
@@ -246,15 +246,15 @@
                 </div>
 
             </div>
-            <div class="text-center mt-2">
-                <button class="btn btn-primary">See More Course</button>
+            <div class="text-center mt-3">
+                <button class="btn btn-primary">See More Courses</button>
             </div>
         </section>
         <!-- courses card section end  -->
         <br>
         <!-- work section start  -->
         <section>
-            <div class="card mb-3" style="max-width: 1150px;">
+            <div class="card mb-3 my-5" style="max-width: 1150px;">
                 <div class="row g-0">
                     <div class="col-md-6">
                         <img src="./images/working.png" class="img-fluid rounded-start" alt="...">
@@ -382,7 +382,21 @@
                 </div>
             </div>
         </section>
+        <div class="text-center my-5">
+            <button type="button" class="btn btn-info text-white ">Viwe all</button>
+        </div>
         <!-- student section end -->
+
+        <!-- student feedback section start  -->
+
+        <section>
+            <div class="text-center">
+                <h1>Some Students Feedback</h1>
+                <p>It is a long established fact that a reader will be distracted by the readable content of a page when
+                    looking at its layout.</p>
+            </div>
+        </section>
+        <!-- student feedback section end  -->
 
 
         <!-- acordian friquenty ask questioin start  -->
